# backend/src/models/carousel.model.ts
@@ -1,13 +1,13 @@
 import { Schema } from "mongoose";
 
 export interface ICarousel {
-  orderCarrossel: number;
+  orderCarousel: number;
   extraURL?: string;
 }
 
 export const carouselSchema = new Schema<ICarousel>(
   {
-    orderCarrossel: { type: Number, required: true, default: 0 },
+    orderCarousel: { type: Number, required: true, default: 0 },
     extraURL: { type: String, required: false },
   },
   {
