# backend/src/zod/schemas/perspective.schema.ts
@@ -15,8 +15,8 @@ export const createPerspectiveSchema = z.object({
     content: z.string().optional(),
     references: z.array(z.object({ text: z.string() })).optional(),
     authors: z.array(objectIdSchema).optional(),
-    isCarrossel: z.boolean().optional(),
-    orderCarrossel: z.number().optional(),
+    isCarousel: z.boolean().optional(),
+    orderCarousel: z.number().optional(),
     banner: z.string().url({ message: "URL do banner inválida" }).optional(),
     extraURL: z.string().url({ message: "URL extra inválida" }).optional(),
   }),
@@ -30,8 +30,8 @@ export const updatePerspectiveSchema = z.object({
     content: z.string().optional(),
     references: z.array(z.object({ text: z.string() })).optional(),
     authors: z.array(objectIdSchema).optional(),
-    isCarrossel: z.boolean().optional(),
-    orderCarrossel: z.number().optional(),
+    isCarousel: z.boolean().optional(),
+    orderCarousel: z.number().optional(),
     banner: z.string().url({ message: "URL do banner inválida" }).optional(),
     extraURL: z.string().url({ message: "URL extra inválida" }).optional(),
   }),
